--- a/netlify.toml
+++ b/netlify.toml
@@ -12,8 +12,8 @@
 
 [[edge_functions]]
   function = "new_test"
-  path = "/*"
+  path = "/new_test"
 
 [[edge_functions]]
   function = "gdtomd"
-  path = "/*"
+  path = "/gd"
